[gd_scene load_steps=8 format=2]

[ext_resource path="res://death_popup/gameover.png" type="Texture" id=1]
[ext_resource path="res://death_popup/menubutton.png" type="Texture" id=2]
[ext_resource path="res://death_popup/death_popup.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="DeathPopup" type="CanvasLayer"]
pause_mode = 2

[node name="DeathPopup" type="Popup" parent="."]
visible = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="GameOverSprite" type="Sprite" parent="DeathPopup"]
position = Vector2( 160, 60 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="DeathPopup"]
margin_left = 140.0
margin_top = 90.0
margin_right = 180.0
margin_bottom = 104.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 20, 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 2 )

[node name="ButtonScaleAnimator" type="Tween" parent="DeathPopup"]

[connection signal="mouse_entered" from="DeathPopup/Button" to="DeathPopup" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="DeathPopup/Button" to="DeathPopup" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="DeathPopup/Button" to="DeathPopup" method="_on_Button_pressed"]
